# aravis

./: meson.build
docs/reference/aravis/: meson.build
po/: meson.build
src/: arvgcregisternode.c  meson.build
tests/: genicam.c
viewer/: meson.build
viewer/data/: meson.build
